copy in code for login screen - app builds and page displays correctly

--- a/src/assets/app.module.scss
+++ b/src/assets/app.module.scss
@@ -8,3 +8,10 @@ a[target='_blank']:after {
   are set to edit mode.
 */
 .scChromeData, .scpm { display: none !important; }
+
+body { 
+  font-family: "acumin-pro", Helvetica, Arial, sans-serif;
+}
+
+
+
